[package]
name = "dsd_decoder"
version = "0.1.0"
edition = "2021"
description = "DSD (.dsf/.dff) to PCM decoder, wasm-bindgen, for SIGNAL player"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Symphonia handles DSD demuxing + many other lossless formats.
# We use it for DSF/DFF container parsing and bit-stream extraction.
symphonia = { version = "0.5", default-features = false, features = ["dsf", "aiff", "wav", "flac"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
