[package]
name = "signal_core"
version = "0.1.0"
edition = "2021"
description = "SIGNAL — Rust core: metadata parsing, DR meter, hi-res analysis, DSD decoder"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"


[profile.release]
# size + speed
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
